<resources>
    <string name="app_name">Higher_Lower_Game2020</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="guess_if_the_next_throw_is_going_to_be_lower_equal_or_higher">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="equel">equel</string>
    <string name="image_dice">Image Dice</string>
</resources>
